--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin's - Tic Tac Toe</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <script src="assets/script/main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div id="gameBoard"></div>
+    <div class="reset">
+      <button id="newGame">Start New Game</button>
+      <button id="reset">Reset Game</button>
+    </div>
+    <p id="status"></p>
+  </body>
 </html>
